Cambio de placeholder y se agrega color estado act

--- a/src/TodoItem/TodoItem.css
+++ b/src/TodoItem/TodoItem.css
@@ -9,6 +9,7 @@
 }
 
 .TodoItem-p {
+  background-color: hwb(64 17% 5%);
   margin: 24px 0 24px 24px;
   width: calc(100% - 120px);
   font-size: 18px;
@@ -16,7 +17,9 @@
   font-weight: 400;
 }
 .TodoItem-p--complete {
-  text-decoration: line-through;
+  
+  background-color: hwb(138 51% 13%);
+  text-decoration: line-through
 }
 
 .Icon {
